--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "dat.gui": "^0.7.7",
     "three": "^0.128.0"
   },
   "devDependencies": {
