--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "three": "^0.128.0"
   },
   "devDependencies": {
+    "@types/dat.gui": "^0.7.6",
+    "@types/three": "^0.127.1",
     "clean-webpack-plugin": "*",
     "css-loader": "^5.2.4",
+    "dat.gui": "^0.7.7",
     "html-webpack-plugin": "^5.3.1",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
     "mini-css-extract-plugin": "^1.5.0",
     "prettier": "^2.2.1",
+    "ts-loader": "^9.1.1",
+    "typescript": "^4.2.4",
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
