--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "dat.gui": "^0.7.7",
+    "glslify": "^7.1.1",
     "three": "^0.128.0"
   },
   "devDependencies": {
@@ -21,6 +22,8 @@
     "clean-webpack-plugin": "*",
     "css-loader": "^5.2.4",
     "dat.gui": "^0.7.7",
+    "glsl-fog": "^0.0.1",
+    "glslify-loader": "^2.0.0",
     "html-webpack-plugin": "^5.3.1",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
