--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^5.2.4",
     "dat.gui": "^0.7.7",
     "glsl-fog": "^0.0.1",
+    "glsl-noise": "*",
     "glslify-loader": "^2.0.0",
     "html-webpack-plugin": "^5.3.1",
     "husky": "^6.0.0",
