--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clean-webpack-plugin": "*",
     "css-loader": "^5.2.4",
     "dat.gui": "^0.7.7",
+    "glsl-face-normal": "^1.0.2",
     "glsl-fog": "^0.0.1",
     "glsl-noise": "*",
     "glslify-loader": "^2.0.0",
