--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^4.2.4",
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-glsl-loader": "github:barkm/webpack-glsl-loader"
   }
 }
