--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "sourceMap": true,
     "strict": true,
     "target": "ES2020",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true
   },
   "include": ["src"]
 }
