--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "animejs": "^3.2.1",
     "dat.gui": "^0.7.7",
+    "gaussian": "^1.2.0",
     "glslify": "^7.1.1",
     "simplex-noise": "^2.4.0",
     "three": "^0.128.0"
