--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "animejs": "^3.2.1",
     "dat.gui": "^0.7.7",
     "gaussian": "^1.2.0",
+    "glsl-random": "^0.0.5",
     "glslify": "^7.1.1",
     "simplex-noise": "^2.4.0",
     "three": "^0.128.0"
