--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "glsl-random": "^0.0.5",
     "glslify": "^7.1.1",
     "simplex-noise": "^2.4.0",
+    "stats.js": "^0.17.0",
     "three": "^0.128.0"
   },
   "devDependencies": {
     "@types/animejs": "^3.1.3",
     "@types/dat.gui": "^0.7.6",
     "@types/gaussian": "^1.1.2",
+    "@types/stats.js": "^0.17.0",
     "@types/three": "^0.127.1",
     "clean-webpack-plugin": "*",
     "css-loader": "^5.2.4",
